--- a/src/pages/Player/Player.module.css
+++ b/src/pages/Player/Player.module.css
@@ -2,12 +2,12 @@
     background-color: var(--colorNegro);
     width: 100%;
     height: 100vh;
-    padding: 40px;
+    padding: 2.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 iframe {
@@ -19,5 +19,6 @@ iframe {
 .container h2 {
     font-family: var(--fontTitulos);
     font-size: 2rem;
+    font-weight: 400;
     color: var(--colorBlanco);
 }
