--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,6 +1,6 @@
 .imagen {
     width: 100%;
-    height: 300px;
+    height: 18.75rem;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
