--- a/src/components/BotonMostrarFormulario/BotonMostrar.module.css
+++ b/src/components/BotonMostrarFormulario/BotonMostrar.module.css
@@ -1,15 +1,20 @@
-.link {
+.boton {
     box-sizing: border-box;
     height: 2.5rem;
+    background-color: var(--colorNegro);
     color: var(--colorBlanco);
     padding: 0.5rem 1rem;
     border-radius: 1.25rem;
     border: 2px solid var(--colorBlanco);
     cursor: pointer;
     transition: all 0.4s ease-in-out;
+
+    font-family: var(--fontTexto);
+    font-size: 1rem;
+    font-weight: 400;
 }
 
-.link:hover {
+.boton:hover {
     color: var(--colorNaranja);
     border: 2px solid var(--colorNaranja);
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
