--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,35 +1,34 @@
 .imagen {
     width: 100%;
-    height: 600px;
+    height: 37.5rem;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding-right: 40px;
+    padding-right: 2.5rem;
 }
 
 .texto {
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
     gap: 2rem;
-    width: 60%;
-
 }
 
 .texto h1 {
     color: var(--colorBlanco);
     font-family: var(--fontTitulos);
-    font-size: 60px;
+    font-size: 3.75rem;
     text-align: right;
 }
 
 
 .texto h2 {
     color: var(--colorNegro);
-    font-size: 32px;
+    font-size: 2rem;
     text-align: right;
 }
 
