--- a/src/pages/Inicio/index.module.css
+++ b/src/pages/Inicio/index.module.css
@@ -1,11 +1,17 @@
 .container {
     width: 100%;
-    height: 100%;
-    background-color: var(--colorNegro);
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
-    padding: 80px 40px;
+}
+
+.containerContenido {
+    width: 100%;
+}
+
+
+.containerCategorias {
+    width: 100%;
+    padding: 2.5rem 0;
 }
