--- a/src/components/BotonMostrarFormulario/BotonMostrar.module.css
+++ b/src/components/BotonMostrarFormulario/BotonMostrar.module.css
@@ -1,4 +1,5 @@
 .boton {
+    display: none;
     box-sizing: border-box;
     height: 2.5rem;
     background-color: var(--colorNegro);
@@ -18,4 +19,11 @@
     color: var(--colorNaranja);
     border: 2px solid var(--colorNaranja);
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
+}
+
+@media (max-width: 819.98px) {
+    .boton {
+        width: 2.5rem;
+        padding: 0.5rem;
+    }        
 }
