--- a/src/components/Categoría/Categoria.module.css
+++ b/src/components/Categoría/Categoria.module.css
@@ -10,7 +10,7 @@
 }
 
 .container h3 {
-    width: 360px;
+    width: 22.5rem;
     height: 2.5rem;
     font-family: var(--fontTitulos);
     font-size: 1.5rem;
@@ -52,3 +52,13 @@
     border-radius: 20px;
     border: 4px solid var(--colorGrisMuyOscuro);
 }
+
+@media (max-width: 575.98px) {
+    .container {
+        padding-left: 0.5rem;
+    }
+    .container h3 {
+        width: 18.75rem;
+    }
+}
+
