--- a/src/components/Formulario/Formulario.module.css
+++ b/src/components/Formulario/Formulario.module.css
@@ -1,6 +1,9 @@
 .container{
     width: 100%;
     background-color: var(--colorNegro);
+    position: absolute;
+    z-index: 4000;
+    top: 0;
 }
 
 .formulario{
@@ -32,4 +35,17 @@
     justify-content: space-between;
     gap: 2rem;
     padding: 0.8rem 0;
+}
+
+
+@media (max-width: 575.98px) {
+    .formulario{
+        padding: 2.5rem 2rem;
+    }
+    .botones {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1rem;
+    }
 }
