--- a/src/components/Titulo/Titulo.module.css
+++ b/src/components/Titulo/Titulo.module.css
@@ -5,3 +5,17 @@
     color: var(--colorNegro);
     padding: 2.5rem;
 }
+
+@media (max-width: 575.98px) {
+
+    .texto {
+        width: 80%;
+        font-size: 4rem;
+        text-align: center;
+        padding: 2.5rem 0;
+        border-radius: 12px;
+        border: 2px solid var(--colorRojo);
+        background-color: var(--colorNaranjaSombra);
+        box-shadow: 0px 0px 4px 1px var(--colorRojoSombra);
+    }
+}
