--- a/src/components/BotonCerrarFormulario/BotonCerrarFormulario.module.css
+++ b/src/components/BotonCerrarFormulario/BotonCerrarFormulario.module.css
@@ -6,18 +6,23 @@
     color: var(--colorBlanco);
     padding: 0.5rem 1rem;
     border-radius: 1.25rem;
-    border: 2px solid var(--colorBlanco);
+    border: 2px solid var(--colorNaranja);
     cursor: pointer;
     transition: all 0.4s ease-in-out;
     flex-wrap: wrap;
 
+    color: var(--colorNaranja);
     font-family: var(--fontTexto);
     font-size: 1rem;
     font-weight: 400;
 }
 
 .boton:hover {
-    color: var(--colorNaranja);
-    border: 2px solid var(--colorNaranja);
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
+
+@media (max-width: 991.98px) {
+    .boton:hover {
+        box-shadow: none;
+    }
+} 
