--- a/src/components/BotonGuardar/BotonGuardar.module.css
+++ b/src/components/BotonGuardar/BotonGuardar.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     min-width: 12.5rem;
     height: 2.5rem;
-    background-color: var(--colorNegro);
+    background-color: var(--colorNaranja);
     color: var(--colorNaranja);
     padding: 0.5rem 1rem;
     border-radius: 1.25rem;
@@ -11,13 +11,19 @@
     transition: all 0.4s ease-in-out;
     flex-wrap: wrap;
 
+    color: var(--colorNegro);
     font-family: var(--fontTexto);
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .boton:hover {
-    color: var(--colorNegro);
-    background-color: var(--colorNaranja);
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
+
+
+@media (max-width: 991.98px) {
+    .boton:hover {
+        box-shadow: none;
+    }
+} 
