--- a/src/components/BotonMostrarFormulario/BotonMostrar.module.css
+++ b/src/components/BotonMostrarFormulario/BotonMostrar.module.css
@@ -21,6 +21,16 @@
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
 
+
+@media (max-width: 991.98px) {
+    .boton:hover {
+        color: var(--colorBlanco);
+        border: 2px solid var(--colorBlanco);;
+        box-shadow: none;
+    }
+} 
+
+
 @media (max-width: 819.98px) {
     .boton {
         width: 2.5rem;
