--- a/src/components/CabeceraLinks/CabeceraLinks.module.css
+++ b/src/components/CabeceraLinks/CabeceraLinks.module.css
@@ -18,6 +18,14 @@
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
 
+@media (max-width: 991.98px) {
+    .link:hover {
+        color: var(--colorBlanco);
+        border: 2px solid var(--colorBlanco);;
+        box-shadow: none;
+    }
+} 
+
 @media (max-width: 819.98px) {
     .link {
         width: 2.5rem;
