--- a/src/components/Categoría/Categoria.module.css
+++ b/src/components/Categoría/Categoria.module.css
@@ -4,9 +4,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-    padding-left: 2.5rem;
+    padding: 2.5rem;
 }
 
 .container h3 {
@@ -55,7 +53,7 @@
 
 @media (max-width: 575.98px) {
     .container {
-        padding-left: 0.5rem;
+        padding: 2.5rem 0.5rem;
     }
     .container h3 {
         width: 18.75rem;
