--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --colorRojoSombra: rgba(191, 4, 4, 0.8);
   --colorNaranjaSombra: rgba(242, 159, 5, 0.8);
   --colorVerdeSombra: rgba(131, 166, 3, 0.8);
+  --colorNegroSombra: rgba(17, 17, 23, 0.8);
 }
 
 /* RESET*/
