--- a/src/components/ModalEditar/ModalEditar.module.css
+++ b/src/components/ModalEditar/ModalEditar.module.css
@@ -1,3 +1,13 @@
+.overlay{
+    background-color: var(--colorNegroSombra);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9998;
+}
+
 .modal {
     width: 70vw;
     height: 90vh;
