Agrega botón icono cerrar en el formulario. Formatea códigos.

--- a/src/components/CampoTexto/CampoTexto.module.css
+++ b/src/components/CampoTexto/CampoTexto.module.css
@@ -20,6 +20,7 @@
     color: var(--colorBlanco);
     font-size: 1rem;
     font-weight: 400;
+    transition: all 0.4s ease-in-out;
 }
 
 .campoTexto input:focus {
