--- a/src/components/Formulario/Formulario.module.css
+++ b/src/components/Formulario/Formulario.module.css
@@ -74,6 +74,31 @@
     padding: 0.8rem 0;
 }
 
+.container .btnIconoCerrar {
+    width: 1.5rem;
+    min-width: 1.5rem;
+    height: 1.5rem;
+    background-color: var(--colorNegro);
+    color: var(--colorBlanco);
+    padding: 0;
+    border-radius: 0.75rem;
+    border: none;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+
+    font-family: inherit;
+    font-size: 1.5rem;
+    font-weight: 400;
+
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.container .btnIconoCerrar:hover {
+    color: var(--colorNaranja);
+    box-shadow: none;
+}
 
 @media (max-width: 575.98px) {
     .formulario {
@@ -85,5 +110,9 @@
         align-items: center;
         justify-content: space-between;
         gap: 1rem;
+    }
+
+    .container .btnIconoCerrar:hover {
+        color: var(--colorBlanco);
     }
 }
