Agrega botón cerrar en el formulario de editar video, cambia botón limpiar por borrar,  y agrega íconos en los botones guardar, borrar, cerrar.

--- a/src/components/BotonLimpiar/BotonLimpiar.module.css
+++ b/src/components/BotonLimpiar/BotonLimpiar.module.css
@@ -15,6 +15,11 @@
     font-family: var(--fontTexto);
     font-size: 1rem;
     font-weight: 400;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
 }
 
 .boton:hover {
