--- a/src/components/BotonMostrarFormulario/BotonMostrar.module.css
+++ b/src/components/BotonMostrarFormulario/BotonMostrar.module.css
@@ -24,16 +24,17 @@
 @media (max-width: 991.98px) {
     .boton:hover {
         color: var(--colorBlanco);
-        border: 2px solid var(--colorBlanco);;
+        border: 2px solid var(--colorBlanco);
+        ;
         box-shadow: none;
     }
-} 
+}
 
 @media (max-width: 819.98px) {
     .boton {
         width: 2.5rem;
         padding: 0.5rem;
-    }        
+    }
 }
 
 @media (max-width: 575.98px) {
