--- a/src/pages/Favoritos/Favoritos.module.css
+++ b/src/pages/Favoritos/Favoritos.module.css
@@ -33,3 +33,9 @@
 
     box-shadow: 0px 0px 4px 1px var(--colorRojoSombra);
 }
+
+@media (max-width: 991.98px) {
+    .mensaje {
+        width: 90%;;
+    }
+}
