Formatea el código. Agrega comentarios. Cambia nombr del botón borrar por restablecer en el ModalEditar. Emprolija responsive.

--- a/src/components/BotonMostrarFormulario/BotonMostrar.module.css
+++ b/src/components/BotonMostrarFormulario/BotonMostrar.module.css
@@ -21,6 +21,7 @@
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
 
+/* Cambia formato a solo ícono en tablet */
 @media (max-width: 991.98px) {
     .boton {
         width: 2.5rem;
@@ -28,6 +29,7 @@
     }
 }
 
+/* Cambia lugar a bottonm-nav-bar y pierde el borde */
 @media (max-width: 575.98px) {
     .boton {
         border-radius: 0;
