--- a/src/components/ModalEditar/ModalEditar.module.css
+++ b/src/components/ModalEditar/ModalEditar.module.css
@@ -91,12 +91,6 @@
     border: 4px solid var(--colorGrisMuyOscuro);
 }
 
-
-
-
-
-
-
 .texto {
     width: 100%;
     display: flex;
@@ -139,7 +133,6 @@
 
 .botonGuardar {
     width: 100%;
-    min-width: 12.5rem;
     height: 2.5rem;
     background-color: var(--colorNaranja);
     color: var(--colorNaranja);
@@ -168,7 +161,6 @@
 .botonLimpiar,
 .botonCerrar {
     width: 100%;
-    min-width: 12.5rem;
     height: 2.5rem;
     background-color: var(--colorNegro);
     color: var(--colorBlanco);
@@ -195,12 +187,13 @@
     box-shadow: 0px 0px 4px 1px var(--colorNaranjaSombra);
 }
 
+/* FORMATO TABLET - Cambia porcentaje de cobertura y los botones se alinean verticalmente*/
 @media (max-width: 991.98px) {
     .modal {
         width: 90vw;
         height: 90vh;
     }
-    
+
     .botones {
         flex-direction: column;
         align-items: center;
