--- a/src/components/DialogoConfirmacion/DialogoConfirmacion.module.css
+++ b/src/components/DialogoConfirmacion/DialogoConfirmacion.module.css
@@ -3,27 +3,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 0.5rem;
     padding-bottom: 1rem;
-}
 
-.dialogo p {
-    width: 90%;
     font-family: var(--fontTexto);
     font-size: 0.8rem;
     font-weight: 200;
     color: var(--colorVerde);
+
+}
+
+.dialogo p {
     text-wrap: balance;
 }
 
-.botonIcono{
-    font-size: 1rem;
-    color: var(--colorVerde);
-    cursor: pointer;
+.check {
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 1.5rem;
 }
-
-.botonIcono:hover{
-    color: var(--colorNaranja);
-}
-
-
