--- a/src/components/Formulario/Formulario.module.css
+++ b/src/components/Formulario/Formulario.module.css
@@ -67,6 +67,15 @@
     text-wrap: balance;
 }
 
+.botonesArea {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
 .botones {
     width: 100%;
     display: flex;
